InfoAlert & ProcessBuilder
* we use an Alert now to display Info Messages
* use ProcessBuilder instead of Runtime.exec()